<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:stretchColumns="1"
    >

    <TableRow >
        <TextView
            android:text="@string/descEnviornmentCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="4dp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="4dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/descProjectCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="4dp"/>
    </TableRow>
    <TableRow >
        <TextView
            android:text="@string/descOwnerCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="4dp"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="4dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/descProjectInfoCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:padding="4dp"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:padding="4dp"/>
    </TableRow>
    <TableRow >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:text="@string/descVoteButtonCaption"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_span="2"
            android:padding="4dp"/>
    </TableRow>
    <TableRow >
        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descVoteButtonCaption"
            android:layout_span="2"
            android:padding="4dp"/>
    </TableRow>
    <TableRow >
        <Button
            android:id="@+id/descVoteButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/descVoteButtonCaption"
            />
    </TableRow>
</TableLayout>